# Esion

./: Body-4aa-mod.FCStd  Body-4aa.FCStd  Body-lo-mod.FCStd  Body-lo.2.FCStd  Body-lo.FCStd  Dockerfile  README.md  config.js  esion.html
Debugger/: platformio.ini
Debugger/src/: main.cpp
EsionPage/: .project  index.html
EsionPage/js/: main.js
EsionPage_prototype/: EsioPage.bfproject  index.html
Esp12E/src/: main.cpp
Esp32/: platformio.ini
Esp32-ISP/src/main.cpp/: main.cpp.ino
Esp32-programmer/: platformio.ini
Esp32-programmer/src/: Programmer.cpp  Programmer.hpp  main.cpp
Esp32/doxygen/: doxy.conf
Esp32/src/: ConfigureServer.cpp  ConfigureServer.hpp  ConfigureWebServer.cpp  ConfigureWebServer.hpp  CountersSender.cpp  CountersSender.hpp  Programmer.cpp  Programmer.hpp  SdController.cpp  SdController.hpp  Xtea.cpp  Xtea.hpp  main.cpp  utils.hpp
EspConfigurePage/: index.html
SearchIndexDebugPage/: index.html
SearchIndexDebugPage/js/: main.js
ServerDebugPage/: index.html
ServerDebugPage/js/: main.js
UsersAdminPage/: README.md  package-lock.json  package.json
UsersAdminPage/public/: index.html
UsersAdminPage/src/: App.vue  main.js  material-locale.js  router.js
UsersAdminPage/src/api/: api.js  socket.js  ws-client.js
UsersAdminPage/src/components/: AddUser.vue  UsersInformation.vue
UsersAdminPage/src/layouts/: Default.vue  Plain.vue
UsersAdminPage/src/store/: index.js
UsersAdminPage/src/store/modules/: auth.js  users.js
UsersAdminPage/src/views/: 404.vue  Login.vue  Users.vue
attiny13-pwr-key-test/: platformio.ini
attiny13-pwr-key-test/src/: main.cpp
attiny44/: platformio.ini
attiny44/src/: main.cpp
attiny84/: CMakeLists.txt  platformio.ini
attiny84/esion_tiny/: platformio.ini
attiny84/esion_tiny/src/: Setup.h  counter.h  main.cpp
attiny84/src/: CMakeLists.txt  _main.cpp
conf-srv-emulator/bld/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
conf-srv-emulator/bld/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
conf-srv-emulator/bld/src/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
conf-srv-emulator/bld/src/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
conf-srv-emulator/bld/src/websocket/: CTestTestfile.cmake  Makefile  cmake_install.cmake
conf-srv-emulator/cmake/: FindGumbo.cmake  FindJsonCpp.cmake
conf-srv-emulator/src/: CMakeLists.txt  http_content_type.h  http_headers.h  http_request.h  http_server.cpp  http_server.h  main.cpp  srv_tools.h
conf-srv-emulator/src/tests/: CMakeLists.txt
conf-srv-emulator/src/utils/: CMakeLists.txt  ForEachTuple.hpp  JsonCommand.cpp  JsonCommand.hpp  NonCopyable.hpp  SignalDispatcher.hpp  Timer.hpp  uuid.hpp
conf-srv-emulator/src/websocket/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.hpp
docs/: web_service_commands.md
esion-conf-page/: README.md  package-lock.json  package.json
esion-conf-page/public/: FontRoboto.css  index.html
esion-conf-page/src/: App.vue  main.js
esion-conf-page/src/components/: Counter.vue  CountersTab.vue  SettingsTab.vue
esp8266/: Esion.cpp
esp8266/docs/: Инструкция эсион-NN.doc  Календарный план разработки опытного образца.docx  Микроконтроллерный модуль ESION.docx  Список компонентов.docx  ТЗ на разработку счетчика импульсов.docx  ЭСИОН распиновка.dia
kicad/: esion-4aa.kicad_pcb  esion-4aa.sch  esion-lo.kicad_pcb  esion-lo.sch
programmer/: programmer.py  programmer.service  programmer.sh
ws-server/: CMakeLists.txt  curl_yandex_api.sh  esion-srv.service  esion-srv.sh  main.cpp  ws-server.files  ws-server.geany  ws_server.cpp
ws-server/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  screenlog.0
ws-server/bld/utils/: Makefile  cmake_install.cmake
ws-server/bld/websocket/: Makefile  cmake_install.cmake
ws-server/cmake/: FindMongoClient.cmake  FindWTCPP.cmake  UTest.cmake
ws-server/src/: BaseWorker.cpp  BaseWorker.hpp  CMakeLists.txt  DbFacade.cpp  DbFacade.hpp  DevicePeerWorker.cpp  DevicePeerWorker.hpp  GeoRequester.cpp  GeoRequester.hpp  IndexDbFacade.cpp  IndexDbFacade.hpp  OperatorCommands.cpp  OperatorCommands.hpp  OperatorPeerWorker.cpp  OperatorPeerWorker.hpp  ReportGenerator.cpp  ReportGenerator.hpp  SearchIndex.cpp  SearchIndex.hpp  SearchIndexClient.cpp  SearchIndexClient.hpp  SearchIndexCommands.cpp  SearchIndexCommands.hpp  SearchIndexPeerWorker.cpp  SearchIndexPeerWorker.hpp  UsersAdminCommands.cpp  UsersAdminCommands.hpp  UsersAdminPeerWorker.cpp  UsersAdminPeerWorker.hpp  gen_main.cpp  main.cpp  si_main.cpp  ws_main.cpp  ws_server.cpp  ws_server.hpp
ws-server/src/tests/: CMakeLists.txt  ut_db_facade.cpp  ut_url_parser.cpp
ws-server/src/utils/: CMakeLists.txt  ForEachTuple.hpp  JsonCommand.cpp  JsonCommand.hpp  Log.cpp  Log.hpp  NonCopyable.hpp  Singleton.hpp  uuid.cpp  uuid.hpp
ws-server/src/websocket/: WebSocketServer.cpp  crypto.hpp  server_ws.hpp  servers.cpp
ws-server/utils/: Log.cpp  Log.hpp  RoomController.hpp
ws-server/websocket/: WebSocketServer.hpp  WsServer.cpp  WssServer.cpp  crypto.hpp  server_ws.hpp
